[package]
name = "wgproto"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
constant_time_eq = "0.3.0"
rand_core = { version = "0.6.4", features = ["getrandom"], default-features = false }
x25519-dalek = { workspace = true }
tai64 = "4.0.0"
hmac = { version = "0.12.1", features = [], default-features = false }
zeroize = { version = "1.8.1", features = ["alloc", "std", "zeroize_derive"], default-features = false }

[workspace]
members = [".", "wgproxy"]
default-members = [".", "wgproxy"]

[workspace.dependencies]
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets", "zeroize"], default-features = true }
wgproto = { path = "." }
